--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "is216-vue-vite",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite serve",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "firebase": "^9.12.0",
-    "vue": "^3.2.38",
+    "vue": "^3.2.41",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
@@ -20,6 +22,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "vite": "^3.0.9"
   }
 }
