--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^9.12.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
