--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
