--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vueform/multiselect": "^2.5.6",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "firebase": "^9.12.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
