--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^1.6.0",
     "@popperjs/core": "^2.11.6",
     "@vueform/multiselect": "^2.5.6",
     "animate.css": "^4.1.1",
